zinc-flow-java Phase 0: worker prep for fleet UI split
Mirrors zinc-flow-csharp's fleet-UI design doc (docs/design-fleet-ui.md,
APPROVED 2026-04-13) Phase 0. Worker-side backend capabilities the UI
binary will need, shipped in one commit rather than seven so the
management-API surface reviews as a single slice.

Slice A — layered config + overlays
- ConfigOverlay deep-merges base ← config.local.yaml ← secrets.yaml
  with per-dot-path provenance. Env overrides: $ZINCFLOW_CONFIG_LOCAL,
  $ZINCFLOW_SECRETS_PATH.
- GET /api/overlays + PUT /api/overlays/secrets.

Slice B — processor versioning
- Registry keyed by {name, version}; `type: Foo@1.2.0` pins a version,
  plain `type: Foo` resolves to latest. TypeInfo carries description +
  configKeys + relationships for UI form rendering.
- ProcessorPlugin SPI gains default version/description/configKeys/
  relationships.
- GET /api/processor-types + GET /api/processor-types/{name}.

Slice C — YAML emitter + flow save
- YamlEmitter serialises current graph + specs back to YAML.
- POST /api/flow/save writes to the base config path.
- PipelineGraph + ConfigLoader lastSpecs now use ordered unmodifiable
  maps so round-trips preserve declaration order.

Slice D — identity + UI self-registration
- NodeIdentity resolves nodeId from ui.nodeId config override, else a
  UUID persisted to ./zincflow.nodeId. Hostname reported separately.
- UIRegistrationProvider POSTs identity to `ui.register_to` on enable +
  heartbeats every 30s on a daemon thread.
- GET /api/identity returns {nodeId, hostname, version, port, uptimeMillis}.

Slice E — processor mutation endpoints
- Pipeline.updateProcessorConfig rebuilds an instance via the registry
  while keeping the processor's name, connections, and state.
- PUT /api/processors/{name}/config, PUT /api/processors/{name}/connections
  (alias of PUT /api/connections/{from} for design-doc URL shape).

Slice F — provenance failures + lineage
- GET /api/provenance/failures?n=N filters the ring buffer to